fix margin collapse

--- a/app/assets/src/components/views/SampleUploadFlow/host_organism_message.scss
+++ b/app/assets/src/components/views/SampleUploadFlow/host_organism_message.scss
@@ -7,6 +7,7 @@
 }
 
 .messageContainer {
+  margin: $space-s 0;
   strong {
     font-weight: $font-weight-bold;
   }
@@ -22,6 +23,10 @@
 
   &:nth-child(even) {
     background-color: $info-bg;
+  }
+
+  &:last-child {
+    margin-bottom: $space-l;
   }
 }
 
